# aoi-wafer-stacking

./: .env  .gitignore  .gitmodules  README.md  bundle-stats.html  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  spec.md  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.VSCodeCounter/2025-08-06_21-28-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-08-18_01-05-14/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
scripts/: clean_appdata.py  sync-tauri-versions.mjs
sql/: README.md  init.sql
src/: App.tsx  CONST.ts  MenuItems.tsx  WaferScene.tsx  Workflows.ts  env.ts  main.tsx  sqlDB.ts  store.ts
src-tauri/: 1-86107919CNF1.xls  Cargo.toml  build.rs  libtorch  tauri.conf.json  tauri.libtorch.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  test.out  test.sh
src-tauri/.cargo/: config.toml
src-tauri/assets/: 1-86107919CNF1.xls
src-tauri/assets/models/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  inference.rs  inference_stub.rs  lib.rs  main.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/file/: file_io.rs  mod.rs
src-tauri/src/file/tests/: mod.rs
src-tauri/src/file_handler/: file_lock.rs  mod.rs
src-tauri/src/file_handler/tests/: mod.rs
src-tauri/src/parser/: formats.rs  mod.rs  xls.rs
src-tauri/src/parser/test/: mod.rs  xls.rs
src-tauri/src/parser/tests/: mod.rs
src-tauri/src/wafer/: ds.rs
src-tauri/static/: 1-86107919CNF1.xls  P0094B_B003332_01.txt  P0097B_20250721160205.xlsx  S1M032120B_B003332_01_mapEx.txt
src/api/: wafer.ts
src/auth/: AuthModal.tsx
src/components/: AutoTriggerSwitch.tsx  DataSourceDirectorySelectList.tsx  DirectorySelectList.tsx  FlowStepper.tsx  FolderSelect.tsx  JobManager.tsx  LastSaved.tsx  LayersSelector.tsx  MetadataCard.tsx  MinWidthNotice.tsx  PathPicker.tsx  ProcessRouteStepper.tsx  RawWaferSummary.tsx  RegexInput.tsx  RotatingDisk.tsx  SaveSectionButton.tsx  Toaster.tsx  index.tsx
src/constants/: MenuItems.tsx  default.ts  index.ts
src/db/: auth.ts  binSelection.ts  fileIndex.ts  folderIndex.ts  index.ts  offsets.ts  productSize.ts  spreadSheet.ts  types.ts  waferData.ts  waferStackStats.ts  wafermaps.ts
src/flows/: Config.ts  (+4 more)
test/: data_config.json  test.json
(+403 files in other folders)
