[package]
name = "wafer-overlay"
version = "0.1.0"
description = "一个智能叠图软件"
authors = ["JUN WEI WANG", "YI TING"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wafer_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
zip = "4.1.0"
calamine = "0.26.0"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
fs2 = "0.4.3"
once_cell = "1.21.3"
chrono = "0.4.41"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"

