[package]
name = "aoi-wafer-stacking"
version = "1.0.2"
description = "一个智能叠图软件"
authors = ["JUN WEI WANG", "YI TING"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wafer_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-opener = "2.5.3"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
zip = "4.6.1"
calamine = "0.26.1"
fs2 = "0.4.3"
once_cell = "1.21.3"
chrono = "0.4.43"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"
tch = { version = "0.22.0", optional = true }
rayon = { version = "1.11", optional = true }
regex = { version = "1", optional = true }

[features]
default = ["libtorch"]
libtorch = ["tch", "rayon", "regex"]
